--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,13 @@
 *{
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
+  outline: none;
+  -webkit-tap-highlight-color: transparent;
 }
 
 body {
   margin: 0;
-  padding: 20px;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -17,6 +19,45 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+.my-gif-app{
+  /* background: red; */
+  padding: 20px;
+}
+.my-gif-app .header{
+  position: fixed;
+  background: rgb(0, 119, 255);
+  width: 100%;
+  left: 0;
+  top: 0;
+  height: auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+  padding: 15px 20px 14px 20px;
+  color: #fff;;
+}
+
+.my-gif-app .header form{
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.my-gif-app .header .search-input{
+  padding: 12px;
+  width: 100%;
+  max-width: 500px;
+  border-radius: 4px;
+  border: none;
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.068);
+}
+
+
+.my-gif-app .content{
+  padding-top: 80px;
 }
 
 .grid-items{
@@ -68,4 +109,5 @@ code {
   width: 90%;
   text-overflow: ellipsis;
   white-space: nowrap;
+  color: #4b4b4b;
 }
